--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
@@ -29,7 +31,9 @@
     "prettier": "^3.3.3",
     "razorpay": "^2.9.4",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "18.2.0",
+    "styles": "^0.2.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
