--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -33,6 +35,7 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-razorpay": "^2.0.1",
     "styles": "^0.2.1",
     "swiper": "^11.1.14"
