--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "geist": "^1.2.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.436.0",
-    "next": "latest",
+    "next": "^14.2.11",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "razorpay": "^2.9.4",
@@ -44,6 +44,7 @@
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "dotenv": "^16.4.5",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
